--- a/css/sass/layout/_signup.scss
+++ b/css/sass/layout/_signup.scss
@@ -42,6 +42,7 @@
                 background: $black;
                 margin-left: 15px;
                 font-size: 1.1rem;
+                cursor: pointer;
             }
         }
     }
