--- a/css/sass/layout/_footer.scss
+++ b/css/sass/layout/_footer.scss
@@ -127,7 +127,7 @@ footer {
         .social-links {
             width: auto;
             height: 100%;
-            background: red;
+            background: white;
             justify-content: flex-start;
             font-size: 1.5rem;
             padding: 0px 50px;
