--- a/css/sass/layout/_product-section.scss
+++ b/css/sass/layout/_product-section.scss
@@ -1,4 +1,6 @@
 .product-section {
+    padding: 0px 0px 70px;
+
     .container {
         flex-direction: row;
         flex-wrap: nowrap;
@@ -10,8 +12,32 @@
 .carousel {
     width: 463px;
     height: 368px;
-    background: rgba(255, 0, 0, 0.75);
+    // background: rgba(255, 0, 0, 0.75);
     align-self: flex-start;
+
+    // REFER TO _SWIPERJS.SCSS FOR MORE STYLES
+
+    .zoom-btn {
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        z-index: 100;
+
+        width: 50px;
+        height: 50px;
+
+        border-radius: 50%;
+        border: solid 1px $grey;
+
+        color: $dark-grey;
+        opacity: .6;
+
+
+        cursor: pointer;
+        &:hover {
+            opacity: .9;
+        }
+    }
 }
 
 .product-info {
@@ -27,6 +53,7 @@
         font-size: 1.8rem;
         font-weight: 300;
         margin-top: 0px;
+        margin: 0px 0px 30px;
     }
 
     .favourite {
@@ -103,10 +130,22 @@
         border: solid 2px white;
         border-radius: 5px;
         cursor: pointer;
+        opacity: .7;
+
+        transition: box-shadow .3s ease-in-out, opacity .2s ease-in-out .15s;
         
-        box-shadow: -2px 17px 85px 0px rgba(0,0,0,0.16);
-        -webkit-box-shadow: -2px 17px 85px 0px rgba(0,0,0,0.16);
-        -moz-box-shadow: -2px 17px 85px 0px rgba(0,0,0,0.16);
+        box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.0);
+        -webkit-box-shadow: 6px 0px 10px 0px rgba(0,0,0,0.0);
+        -moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.0);
+    }
+
+    button.active {
+        border-color: white;
+        opacity: 1;
+
+        box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.15);
+        -webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.15);
+        -moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.15);
     }
 
     #Tan {
@@ -172,7 +211,8 @@
 }
 
 .add-to-basket {
-    margin-bottom: 60px;
+    // margin-bottom: 60px;
+    margin-top: 45px;
     background: $black;
     color: white;
     width: 270px;
@@ -184,4 +224,37 @@
     letter-spacing: .4px;
     cursor: pointer;
 
+}
+
+
+
+
+
+
+// DELIVERY FLASH MESSAGE
+
+.delivery-flash {
+
+    visibility: hidden;
+    
+    z-index: 100;
+    position: absolute;
+    top: 0;
+
+    width: 100%;
+    height: 30px;
+
+    background: rgba(255,255,255, 0.85);
+    pointer-events: none;
+
+    p {
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: .75rem;
+        letter-spacing: .05rem;
+
+        .delivery-countdown {
+            font-weight: 600;
+        }
+    }
 }
