--- a/css/sass/layout/_signup.scss
+++ b/css/sass/layout/_signup.scss
@@ -43,6 +43,10 @@
                 margin-left: 15px;
                 font-size: 1.1rem;
                 cursor: pointer;
+
+                i {
+                    margin-top: 5px;
+                }
             }
         }
     }
