--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,26 @@
   margin-left: 30px;
 }
 
+.header nav .user-nav a:hover {
+  color: #9d9d9d;
+}
+
 .header nav .user-nav a:nth-of-type(even) {
   margin-left: 20px;
 }
 
 .header nav .user-nav a:nth-of-type(odd) {
   margin-left: 20px;
+}
+
+.header nav .user-nav .nav-menu-icn {
+  display: none;
+  width: 30px;
+  height: 30px;
+}
+
+.header nav .user-nav .nav-menu-icn i {
+  font-size: 1.5rem;
 }
 
 .main-logo {
@@ -61,7 +75,7 @@ ul {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 550px;
+  width: auto;
 }
 
 ul li a {
@@ -75,6 +89,70 @@ ul li i {
   font-size: .75rem;
 }
 
+nav ul {
+  padding: 0px;
+}
+
+.dropdown-item {
+  width: 160.63px;
+  position: relative;
+  padding: 0px;
+}
+
+.dropdown-item a {
+  width: 100%;
+  height: 81px;
+  text-align: center;
+}
+
+.dropdown-item .dropdown {
+  height: 120px;
+  width: 100%;
+  z-index: 120;
+  border-radius: 0% 0% 8px 8px;
+  display: none;
+  position: absolute;
+  bottom: -116px;
+  left: 0px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: #f8f8f7;
+  padding: 0px 0px 10px;
+  border-bottom: solid 2px #f8f8f7;
+}
+
+.dropdown-item .dropdown:hover {
+  display: flex;
+}
+
+.dropdown-item .dropdown ul {
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.dropdown-item .dropdown ul li a:hover {
+  color: #9d9d9d;
+}
+
+.dropdown-item:hover {
+  background: #fdfdfc;
+}
+
+.dropdown-item:hover a {
+  color: #9d9d9d;
+}
+
+.dropdown-item:hover .dropdown {
+  display: flex;
+  background: #fdfdfc;
+}
+
+.dropdown-item:hover .dropdown a {
+  color: initial;
+}
+
 .breadcrumb-links {
   margin: 60px 0px 30px;
   font-size: .8rem;
@@ -82,6 +160,10 @@ ul li i {
 
 .breadcrumb-links a:hover {
   text-decoration: underline;
+}
+
+.product-section {
+  padding: 0px 0px 70px;
 }
 
 .product-section .container {
@@ -93,8 +175,25 @@ ul li i {
 .carousel {
   width: 463px;
   height: 368px;
-  background: rgba(255, 0, 0, 0.75);
   align-self: flex-start;
+}
+
+.carousel .zoom-btn {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  z-index: 100;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: solid 1px #f8f8f7;
+  color: #9d9d9d;
+  opacity: .6;
+  cursor: pointer;
+}
+
+.carousel .zoom-btn:hover {
+  opacity: .9;
 }
 
 .product-info {
@@ -109,6 +208,7 @@ ul li i {
   font-size: 1.8rem;
   font-weight: 300;
   margin-top: 0px;
+  margin: 0px 0px 30px;
 }
 
 .product-info .favourite {
@@ -178,9 +278,19 @@ ul li i {
   border: solid 2px white;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: -2px 17px 85px 0px rgba(0, 0, 0, 0.16);
-  -webkit-box-shadow: -2px 17px 85px 0px rgba(0, 0, 0, 0.16);
-  -moz-box-shadow: -2px 17px 85px 0px rgba(0, 0, 0, 0.16);
+  opacity: .7;
+  transition: box-shadow .3s ease-in-out, opacity .2s ease-in-out .15s;
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0);
+  -webkit-box-shadow: 6px 0px 10px 0px rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0);
+}
+
+.colour-options button.active {
+  border-color: white;
+  opacity: 1;
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.15);
 }
 
 .colour-options #Tan {
@@ -246,7 +356,7 @@ ul li i {
 }
 
 .add-to-basket {
-  margin-bottom: 60px;
+  margin-top: 45px;
   background: #141414;
   color: white;
   width: 270px;
@@ -257,6 +367,28 @@ ul li i {
   font-size: 1rem;
   letter-spacing: .4px;
   cursor: pointer;
+}
+
+.delivery-flash {
+  visibility: hidden;
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 30px;
+  background: rgba(255, 255, 255, 0.85);
+  pointer-events: none;
+}
+
+.delivery-flash p {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: .75rem;
+  letter-spacing: .05rem;
+}
+
+.delivery-flash p .delivery-countdown {
+  font-weight: 600;
 }
 
 .product-details {
@@ -309,7 +441,67 @@ ul li i {
 
 .product-details .container {
   height: 476px;
+  width: 800px;
+}
+
+.product-details .container .size-content {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+}
+
+.product-details .container .size-content .info {
+  width: 210px;
+  height: auto;
+}
+
+.product-details .container .size-content .info ul {
+  flex-direction: column;
+  padding-left: 0px;
+}
+
+.product-details .container .size-content .info ul li {
+  flex-direction: row;
+  text-transform: none;
+  font-weight: 300;
+  font-size: .9rem;
+}
+
+.product-details .container .size-content .info ul li .bullet {
+  width: 22px;
+  height: 22px;
+  margin-right: 20px;
+  padding-top: 1.5px;
+  background: white;
+  border: solid 1px #c9c9c9;
+  border-radius: 50%;
+  color: #c9c9c9;
+  font-size: .65rem;
+  font-weight: 500;
+}
+
+.product-details .container .size-content .info ul li span {
+  font-weight: 600;
+}
+
+.product-details .container .size-content .info-img {
+  overflow: hidden;
+  width: 50%;
+  height: auto;
+}
+
+.product-details .container .size-content .info-img img {
   width: 100%;
+  height: auto;
+}
+
+.switch-slide {
+  display: none !important;
+}
+
+.switch-slide.active {
+  display: flex !important;
 }
 
 .interested {
@@ -428,8 +620,14 @@ ul li i {
   background: #f8f8f7;
 }
 
-.card:first-of-type, .card:last-of-type {
-  margin: 0px;
+.card:first-of-type {
+  margin-right: 10px;
+  margin-left: 0px;
+}
+
+.card:last-of-type {
+  margin-left: 10px;
+  margin-right: 0px;
 }
 
 .signup {
@@ -477,6 +675,10 @@ ul li i {
   margin-left: 15px;
   font-size: 1.1rem;
   cursor: pointer;
+}
+
+.signup .container .form-group button i {
+  margin-top: 5px;
 }
 
 footer {
@@ -599,7 +801,7 @@ footer .container {
 .socials .container .social-links {
   width: auto;
   height: 100%;
-  background: red;
+  background: white;
   justify-content: flex-start;
   font-size: 1.5rem;
   padding: 0px 50px;
@@ -676,6 +878,552 @@ footer .container {
   font-display: swap;
 }
 
+@media (max-width: 1260px) {
+  .container {
+    width: 900px !important;
+  }
+  .product-info {
+    padding-right: 75px;
+  }
+  .signup .container h2 {
+    font-size: 1.2rem;
+  }
+  .product-section {
+    width: 100%;
+  }
+  .product-section .container {
+    justify-content: center;
+  }
+  .carousel-wrapper {
+    margin-right: 100px;
+  }
+  .switch-slide {
+    width: 780px;
+  }
+  .switch-slide.active {
+    justify-content: center;
+  }
+  .card {
+    height: 396px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    width: 682px !important;
+    justify-content: center;
+  }
+  .breadcrumb-links .container {
+    width: 595px !important;
+  }
+  .product-section {
+    width: 100%;
+  }
+  .product-section .container {
+    flex-direction: column;
+  }
+  .product-section .container .carousel-wrapper {
+    margin: 0px 0px 30px;
+    width: 90%;
+    height: 100%;
+  }
+  .product-section .container .carousel-wrapper .carousel {
+    height: 600px;
+  }
+  .product-section .container .carousel-wrapper .thumbsSwiper {
+    padding: 15px 10px 10px;
+  }
+  .product-section .container .carousel-wrapper .thumbsSwiper .swiper-wrapper .swiper-slide {
+    height: 140px;
+  }
+  .product-section .container .carousel-wrapper .swiper-button-prev {
+    left: 30px;
+  }
+  .product-section .container .carousel-wrapper .swiper-button-next {
+    right: 30px;
+  }
+  .product-details .details-nav button {
+    font-size: .7rem;
+    font-weight: 500;
+    padding: 0px 15px;
+  }
+  .card:last-of-type {
+    display: none;
+  }
+  .card:nth-of-type(3) {
+    margin-right: 0px;
+  }
+  .card {
+    height: 396px;
+    width: 230px;
+  }
+  .nav-group {
+    display: none;
+  }
+  .nav-menu-icn {
+    display: flex !important;
+  }
+  .footer .container {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    position: relative;
+  }
+  .footer .footer-section {
+    width: 35%;
+  }
+  .footer .footer-section:first-of-type {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  .footer .footer-section:first-of-type .logo {
+    height: 100%;
+    width: 20%;
+    opacity: .3;
+  }
+  .socials .container {
+    justify-content: space-between;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    width: 525px !important;
+  }
+  .product-section .container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .product-info {
+    align-items: center;
+    padding-right: 0px;
+  }
+  .product-info h2 {
+    padding-right: 55px;
+  }
+  .size-guide-link {
+    margin: 0px 0px -10px;
+  }
+  .size-content .info {
+    transform: scale(0.9);
+    width: 230px;
+  }
+  .carousel-wrapper {
+    margin-right: 0px;
+    margin-bottom: 30px;
+    width: 120% !important;
+  }
+  .carousel-wrapper .carousel {
+    height: 500px !important;
+  }
+  .card:nth-of-type(3) {
+    display: none;
+  }
+  .card:nth-of-type(2) {
+    margin-right: 0px;
+  }
+  .signup {
+    height: auto;
+  }
+  .signup .container {
+    flex-direction: column !important;
+    padding: 20px 0px;
+  }
+  .signup .container h2 {
+    margin: 0px;
+  }
+  .signup h2 {
+    margin: 0px;
+  }
+  .footer-section:first-of-type {
+    position: absolute;
+    top: 100px;
+  }
+}
+
+@media (max-width: 646px) {
+  .breadcrumb-links .container {
+    width: 505px !important;
+  }
+  .carousel-wrapper {
+    width: 100% !important;
+  }
+  .carousel {
+    height: 440px !important;
+  }
+  .thumbsSwiper .swiper-wrapper .swiper-slide {
+    height: 110px !important;
+  }
+  .interested .container .bottom {
+    justify-content: center;
+  }
+  .interested .container .top {
+    margin: 0px 25px;
+  }
+}
+
+@media (max-width: 560px) {
+  .container {
+    width: 100% !important;
+    padding: 0px 20px;
+    margin: 0px;
+  }
+  .header .container {
+    padding: 0px 30px;
+  }
+  .carousel {
+    height: 50% !important;
+  }
+  .breadcrumb-links {
+    width: 100%;
+  }
+  .breadcrumb-links .container {
+    padding: 0px;
+    margin: 0px;
+    width: 100% !important;
+  }
+  .breadcrumb-links .container .breadcrumbs {
+    margin: 0px auto 0px 30px;
+  }
+  .footer-section:first-of-type {
+    left: 20px;
+  }
+  .product-details {
+    height: 100%;
+    overflow: hidden;
+  }
+  .product-details .container {
+    padding: 60px 0px;
+    height: 100%;
+  }
+  .product-details .container .switch-slide {
+    height: 530px;
+    align-items: center;
+  }
+  .product-details .container .size-content {
+    justify-content: center;
+    flex-direction: column-reverse;
+  }
+  .product-details .container .size-content .info-img {
+    width: 80%;
+  }
+  .product-details .details-nav button {
+    padding: 0px 15px;
+    margin: 0px 0px;
+  }
+}
+
+@media (max-width: 560px) {
+  .footer .container {
+    justify-content: center;
+    padding-left: 25px;
+  }
+  .footer-section:first-of-type {
+    display: none;
+  }
+  .footer-section:nth-of-type(2) {
+    margin-bottom: 70px;
+  }
+  .footer-section ul,
+  .footer-section ul li,
+  .footer-section h4,
+  .footer-section .address li {
+    width: 100%;
+    min-width: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .carousel-wrapper .carousel {
+    height: 370px !important;
+  }
+  .thumbsSwiper .swiper-wrapper .swiper-slide:first-of-type img {
+    width: 100% !important;
+    height: auto;
+  }
+  .thumbsSwiper .swiper-wrapper .swiper-slide {
+    height: 20% !important;
+    aspect-ratio: 1 / 1;
+  }
+  .product-info {
+    align-items: center;
+    padding-right: 0px;
+  }
+  .product-info h2 {
+    height: 35px;
+    vertical-align: center;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 460px) {
+  .delivery-flash p {
+    font-size: .5rem;
+  }
+  .interested .container .top h2 {
+    font-size: 1rem;
+  }
+  .interested .container .bottom .card:nth-of-type(2) {
+    display: none;
+  }
+  .card:nth-of-type(4) {
+    display: none !important;
+  }
+  .signup .container .form-group form input {
+    width: 200px;
+    font-size: .8rem;
+  }
+  .signup .container .form-group form input::placeholder {
+    font-size: .8rem;
+  }
+  .footer .container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0px;
+  }
+  .footer .container .footer-section {
+    margin-bottom: 80px;
+  }
+  .footer .container .footer-section, .footer .container .footer-section h4 {
+    width: 100%;
+    text-align: center;
+  }
+  .footer .container .footer-section h4::after {
+    width: 100%;
+  }
+}
+
+@media (max-width: 335px) {
+  .product-section .container .carousel-wrapper .carousel {
+    height: 300px !important;
+  }
+}
+
+@media (max-width: 335px) {
+  .product-section .container .carousel-wrapper .carousel {
+    height: 250px !important;
+  }
+  .product-section .container .carousel-wrapper .swiper-button-next,
+  .product-section .container .carousel-wrapper .swiper-button-prev {
+    top: calc( 50% - 35px) !important;
+  }
+  .delivery-flash p {
+    font-size: .45rem;
+  }
+  .social-links {
+    padding: 0px 0px 0px 20px !important;
+  }
+  .socials .container p {
+    margin: 0px;
+  }
+}
+
+.carousel {
+  width: calc(100% - 20px);
+  height: 368px;
+  border-radius: 7.5px;
+}
+
+.swiper-zoom-container img, .thumbsSwiper .swiper-slide img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.carousel-wrapper {
+  width: 463px;
+  height: auto;
+  margin-left: -10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  width: 30px;
+  height: 30px;
+  background: white;
+  border: solid 1px #9d9d9d;
+  border-radius: 50%;
+  top: calc(50% - 60px);
+}
+
+.swiper-button-next i, .swiper-button-prev i {
+  color: #9d9d9d;
+  font-size: .8rem;
+}
+
+.swiper-button-next::after, .swiper-button-prev::after {
+  content: " ";
+  display: none;
+}
+
+.swiper-button-next {
+  right: -50px;
+}
+
+.swiper-button-prev {
+  left: -50px;
+}
+
+.thumbsSwiper {
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+  padding: 10px 10px 10px;
+}
+
+.thumbsSwiper .swiper-slide {
+  height: 108.5px;
+  opacity: 0.4;
+  overflow: hidden;
+  border: solid 3px transparent;
+  border-radius: 7.5px;
+  transition: box-shadow .5s ease-in-out;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
+}
+
+.thumbsSwiper .swiper-slide img {
+  transition: transform 1s ease-in-out .1s;
+  transform: scale(1.1);
+}
+
+.thumbsSwiper .swiper-slide-thumb-active {
+  opacity: 1;
+  border-color: white;
+  border-radius: 7.5px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+}
+
+.thumbsSwiper .swiper-slide-thumb-active img {
+  transform: scale(1.2);
+}
+
+.success-msg {
+  flex-direction: row;
+  flex-wrap: nowrap;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  cursor: pointer;
+  color: white;
+  text-align: center;
+  background-color: #2ecc71;
+}
+
+.success-msg p {
+  margin-left: auto;
+}
+
+.success-msg i {
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.success-msg:hover {
+  background-color: #3fe484;
+}
+
+.form-input {
+  width: 100%;
+  height: 60px;
+  padding: 5px;
+  position: relative;
+  margin: 10px 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.form-input label {
+  width: 85px;
+  color: #f8f8f7;
+  margin-right: 15px;
+  text-align: right;
+  margin-top: 5px;
+  cursor: pointer;
+  display: none;
+}
+
+.form-input input {
+  flex-grow: 2;
+  height: 50px;
+  padding: 15px 15px;
+  resize: none;
+  outline: none;
+  border: solid 2px transparent;
+  border-radius: 3px;
+  border-bottom-color: #f8f8f7;
+  transition: ease-in-out .25s;
+}
+
+.form-input input:hover, .form-input input:focus {
+  outline: none;
+  border: 2px solid #f8f8f7;
+}
+
+.form-input i {
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
+  visibility: hidden;
+}
+
+.form-input small {
+  position: absolute;
+  top: -28px;
+  left: 5px;
+  color: white;
+  visibility: hidden;
+  background: #e9390d;
+  padding: 5px 15px;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .form-input {
+    height: 0px;
+    min-height: 60px;
+  }
+}
+
+.form-input.success i.success {
+  visibility: visible;
+  color: #2ecc71;
+}
+
+.form-input.success input, .form-input.success textarea {
+  border-color: #2ecc71;
+}
+
+.form-input.error i.error {
+  visibility: visible;
+  color: #e9390d;
+}
+
+.form-input.error small {
+  visibility: visible;
+}
+
+.form-input.error input, .form-input.error textarea {
+  border-color: #e9390d;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Gilroy";
@@ -689,6 +1437,7 @@ a, *:link *:visited {
 
 body, html {
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 .flexc {
