--- a/css/sass/layout/_product-section.scss
+++ b/css/sass/layout/_product-section.scss
@@ -168,6 +168,8 @@
         font-weight: bold;
     }
     select {
+
+        color: $black;
         width: 270px;
         height: 51px;
         border: solid 1px #e9e9e9;
@@ -175,11 +177,16 @@
         padding-left: 15px;
         margin-bottom: 5px;
         appearance: none;
+        -webkit-appearance: none;
         cursor: pointer;
 
         &:focus {
             border-color: #ddd;
             outline: none;
+        }
+
+        &::placeholder {
+            color: $black;
         }
 
     }
