--- a/css/sass/partials/_responsive.scss
+++ b/css/sass/partials/_responsive.scss
@@ -11,6 +11,12 @@ $media-l: 1260px;
 
 }
 
+@media ( min-width: $media-m ) and ( max-width: $media-l ) {
+    .size-options span {
+        right: 25px;
+    }
+}
+
 
 
 @media (max-width: $media-l) {
@@ -167,6 +173,7 @@ $media-l: 1260px;
                     position: absolute;
                     width: 100%;
                     height: 100%;
+                    pointer-events: none;
 
                     .logo {
                         height: 100%;
@@ -223,6 +230,10 @@ $media-l: 1260px;
 
     .size-guide-link {
         margin: 0px 0px -10px;
+    }
+
+    .size-options span {
+        right: 25px;
     }
 
 
