--- a/css/sass/layout/_footer.scss
+++ b/css/sass/layout/_footer.scss
@@ -94,6 +94,10 @@ footer {
     a {
         text-decoration: underline;
         font-weight: 700;
+
+        &:hover {
+            color: $dark-grey;
+        }
     }
 }
 
@@ -137,6 +141,10 @@ footer {
 
             a {
                 z-index: 5;
+
+                &:hover {
+                    color: $dark-grey;
+                }
             }
 
             a:nth-child(2) {
