--- a/css/sass/layout/_signup.scss
+++ b/css/sass/layout/_signup.scss
@@ -44,10 +44,31 @@
                 font-size: 1.1rem;
                 cursor: pointer;
 
+                transition: transform .2s ease-in-out;
+
                 i {
                     margin-top: 5px;
                 }
+
+                &:hover {
+                    transform: scale(1.3);
+                    transition: transform .2s ease-in-out;
+
+                    animation: bob .5s alternate infinite;
+
+                    i {
+                        animation: bob .5s alternate infinite;
+                    }
+                }
             }
         }
+    }
+}
+
+@keyframes bob {
+    from {
+        transform: translateX(-2.5px);
+    } to {
+        transform: translateX(2.5px);
     }
 }
