--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,10 @@
   font-size: .9rem;
 }
 
+.main-logo:hover {
+  opacity: 0.55;
+}
+
 li, ul {
   list-style-type: none;
   text-decoration: none;
@@ -189,11 +193,20 @@ nav ul {
   border: solid 1px #f8f8f7;
   color: #9d9d9d;
   opacity: .6;
+  transition: .1s ease-in-out;
   cursor: pointer;
+}
+
+.carousel .zoom-btn i {
+  transition: .1s ease-in-out;
 }
 
 .carousel .zoom-btn:hover {
   opacity: .9;
+}
+
+.carousel .zoom-btn:hover i {
+  transform: scale(1.2);
 }
 
 .product-info {
@@ -285,6 +298,10 @@ nav ul {
   -moz-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0);
 }
 
+.colour-options button:hover {
+  opacity: .85;
+}
+
 .colour-options button.active {
   border-color: white;
   opacity: 1;
@@ -373,6 +390,10 @@ nav ul {
   font-size: 1rem;
   letter-spacing: .4px;
   cursor: pointer;
+}
+
+.add-to-basket:hover {
+  background-color: #323232;
 }
 
 .delivery-flash {
@@ -688,10 +709,30 @@ nav ul {
   margin-left: 15px;
   font-size: 1.1rem;
   cursor: pointer;
+  transition: transform .2s ease-in-out;
 }
 
 .signup .container .form-group button i {
   margin-top: 5px;
+}
+
+.signup .container .form-group button:hover {
+  transform: scale(1.3);
+  transition: transform .2s ease-in-out;
+  animation: bob .5s alternate infinite;
+}
+
+.signup .container .form-group button:hover i {
+  animation: bob .5s alternate infinite;
+}
+
+@keyframes bob {
+  from {
+    transform: translateX(-2.5px);
+  }
+  to {
+    transform: translateX(2.5px);
+  }
 }
 
 footer {
@@ -785,6 +826,10 @@ footer .container {
   font-weight: 700;
 }
 
+.contact-link a:hover {
+  color: #9d9d9d;
+}
+
 .contact-link:nth-of-type(2) {
   margin-bottom: 10px;
 }
@@ -823,6 +868,10 @@ footer .container {
 
 .socials .container .social-links a {
   z-index: 5;
+}
+
+.socials .container .social-links a:hover {
+  color: #9d9d9d;
 }
 
 .socials .container .social-links a:nth-child(2) {
@@ -1289,6 +1338,10 @@ footer .container {
   display: none;
 }
 
+.swiper-button-next:hover, .swiper-button-prev:hover {
+  background-color: #f8f8f7;
+}
+
 .swiper-button-next {
   right: -50px;
 }
@@ -1314,11 +1367,17 @@ footer .container {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0);
+  cursor: pointer;
+  transition: opacity .2s ease-in-out;
 }
 
 .thumbsSwiper .swiper-slide img {
   transition: transform 1s ease-in-out .1s;
   transform: scale(1.1);
+}
+
+.thumbsSwiper .swiper-slide:hover {
+  opacity: .8;
 }
 
 .thumbsSwiper .swiper-slide-thumb-active {
